--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MathJax AsciiMath Test Page</title>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<title>不是你的题库</title>
 <link href="css/icon.css" rel="stylesheet">
 <link href="css/page.css" rel="stylesheet">
 <script type="text/javascript" async
@@ -12,14 +13,20 @@
 
 <div class='subject-content'>
 <div class='topic'>
-   <p>求`x^2+3x-4=0`中x的值： `$$\sum_{p\rm\;prime}f(p) = \int_{t>1}f(t)d\pi(t).$$`</p>
-   <p class='radio'><span class='icon'></span><span>4</span></p>
-   <p class='radio'><span class='icon'></span><span>-4</span></p>
-   <p class='radio'><span class='icon'></span><span>4和-1</span></p>
-   <p class='radio'><span class='icon'></span><span>-4和1</span></p>
+   <p id='problem' ></p>
+   <p class='radio'><span class='icon'></span><span class='option'></span></p>
+   <p class='radio'><span class='icon'></span><span class='option'></span></p>
+   <p class='radio'><span class='icon'></span><span class='option'></span></p>
+   <p class='radio'><span class='icon'></span><span class='option'></span></p>
 </div>
+   <div class='submit'> 
+      <div class='btn warning-btn'>提前交卷</div>
+	  <div class='btn btn-primary'>下一题</div>
+   </div>
+   <div id='pages'></div>
 </div>
 
 <script type="text/javascript" src="js/topic.js"></script>
+<script type="text/javascript" src="data/items.js"></script>
 </body>
 </html>
