--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
    <div class='hr'></div>
    <div class='card'>
      <div>答题卡</div>
-     <div id='pages'></div>
+     <div class='pages'></div>
    </div>
 </div>
 <div class='record'>
-<div id='pages'>
+<div class='pages'>
 <p class='record-title'>答案判断</p>
-<span class='checked'>1</span>
-<span class='warning'>1</span>
 </div>
 </div>
 
