--- a/topic.html
+++ b/topic.html
@@ -32,9 +32,9 @@
   <div class='content clearfix'>
   <div class="subject-progress">
 <div class="progress">
-<div style="width:20%" class="progress-bar"></div>
+<div id='progress-bar' class="progress-bar"></div>
 </div>
-<span class="progress-nums">1/5</span>
+<span id='progress-nums' class="progress-nums"></span>
 <a href="javascript:void(0);" class="progress-time" title="暂停">
 <span  class="time-text" style="font-size: 20px;">00:00:59</span>
 </a>
