--- a/topic.html
+++ b/topic.html
@@ -7,7 +7,7 @@
 <link href="css/clear.css" rel="stylesheet">
 <link href="css/page.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
-<script type="text/javascript" async
+<script type="text/javascript" 
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 </head>
@@ -17,7 +17,7 @@
   <div class='header clearfix'>
      <a href='' class='logo'>不是你的题库</a>
 	 <ul class='nav'>
-	    <li><a>首页</a></li>
+	    <li><a href='index.html'>首页</a></li>
 		<li><a>课程</a></li>
 		<li><a>题库</a></li>
 		<li><a>讨论区</a></li>
@@ -36,14 +36,14 @@
 </div>
 <span id='progress-nums' class="progress-nums"></span>
 <a href="javascript:void(0);" class="progress-time" title="暂停">
-<span  class="time-text" style="font-size: 20px;">00:00:59</span>
+<span class="time-text" style="font-size: 20px;">00:00:00</span>
 </a>
 </div>
 <div class="subject-title">[单选题]</div>
 <div class='subject-content'>
 
    <div class='topic'>
-     <p id='problem' ></p>
+     <p id='problem' > \({}\)</p>
      <p class='radio'><span class='icon' checked='false'></span><span class='option'></span></p>
      <p class='radio'><span class='icon' checked='false'></span><span class='option'></span></p>
      <p class='radio'><span class='icon' checked='false'></span><span class='option'></span></p>
@@ -114,9 +114,9 @@
 <p class='record-title'>答案判断</p>
 </div>
 </div>
-
+<script type="text/javascript" src="data/items.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/topic.js"></script>
-<script type="text/javascript" src="data/items.js"></script>
+
 </body>
 </html>
