--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 <div class='index container'>
   <div class='header clearfix'>
-     <a href='' class='logo'>不是你的题库</a>
+     <a href='index.html' class='logo'>不是你的题库</a>
 	 <ul class='nav'>
-	    <li><a>首页</a></li>
+	    <li><a href='index.html'>首页</a></li>
 		<li><a>课程</a></li>
 		<li><a>题库</a></li>
 		<li><a>讨论区</a></li>
