--- a/report.html
+++ b/report.html
@@ -11,9 +11,9 @@
 <body>
 <div class='index container'>
   <div class='header clearfix'>
-     <a href='' class='logo'>不是你的题库</a>
+     <a href='index.html' class='logo'>不是你的题库</a>
 	 <ul class='nav'>
-	    <li><a>首页</a></li>
+	    <li><a href='index.html'>首页</a></li>
 		<li><a>课程</a></li>
 		<li><a>题库</a></li>
 		<li><a>讨论区</a></li>
@@ -39,7 +39,7 @@
 			      <span class='score'>得分：100</span>
 			   </div>
 			   <div class='info-detail'>
-			      <p><span>试卷：</span><span class='info-item'>ssa</span></p>
+			      <p><span>试卷：</span><span class='info-item'>假的报告</span></p>
 				  <p><span>正确题数：</span><span class='info-item'>5/6</span></p>
 				  <p><span>得分：</span><span class='info-item'>100</span></p>
 				  <p><span>用时：</span><span class='info-item'>00:00:00</span></p>
