--- a/topic.html
+++ b/topic.html
@@ -7,7 +7,7 @@
 <link href="css/clear.css" rel="stylesheet">
 <link href="css/page.css" rel="stylesheet">
 <link href="css/index.css" rel="stylesheet">
-<script type="text/javascript" 
+<script type="text/javascript"
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 </head>
@@ -15,7 +15,7 @@
 
 <div class='topic container'>
   <div class='header clearfix'>
-     <a href='' class='logo'>不是你的题库</a>
+     <a href='index.html' class='logo'>不是你的题库</a>
 	 <ul class='nav'>
 	    <li><a href='index.html'>首页</a></li>
 		<li><a>课程</a></li>
@@ -50,7 +50,7 @@
      <p class='radio'><span class='icon' checked='false'></span><span class='option'></span></p>
    </div>
 
-   <div class='submit'> 
+   <div class='submit'>
       <div class='btn warning-btn'>提前交卷</div>
 	  <div class='btn btn-primary'>下一题</div>
    </div>
