--- a/report.html
+++ b/report.html
@@ -40,9 +40,9 @@
 			   </div>
 			   <div class='info-detail'>
 			      <p><span>试卷：</span><span class='info-item'>假的报告</span></p>
-				  <p><span>正确题数：</span><span class='info-item'>5/6</span></p>
-				  <p><span>得分：</span><span class='info-item'>100</span></p>
-				  <p><span>用时：</span><span class='info-item'>00:00:00</span></p>
+				  <p><span>正确题数：</span><span class='info-item' id='topicNum' ></span></p>
+				  <p><span>得分：</span><span class='info-item score'>100</span></p>
+				  <p><span>用时：</span><span id='time' class='info-item'>00:00:00</span></p>
 				  <p>
                     <a href="javascript:void(0);" class="btn btn-primary js-log-clock nc-req-auth">今日打卡</a>
                   </p>
@@ -104,7 +104,7 @@
 </div>
 </div>
 </div>
-
+<script type="text/javascript" src="data/items.js"></script>
 <script type="text/javascript" src="js/common.js"></script>
 <script type="text/javascript" src="js/report.js"></script>
 </body>
